WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150646
Overlay scrollbars disappear during manual drag-scroll
https://bugs.webkit.org/show_bug.cgi?id=150646
Summary
Overlay scrollbars disappear during manual drag-scroll
Beth Dakin
Reported
2015-10-28 17:08:03 PDT
Overlay scrollbars disappear during manual drag-scroll 1. Set scrollers to be the overlay scrollers in system preferences 2. Go to a webpage that scrolls 3. Get the scrollbar to appear and click on it 4. Holding the mouse down, drag the knob around, and then pause, but keep the mouse down. The scrollbar disappears once you stop moving, even if the mouse is down. It should not, and it doesn't in AppKit.
rdar://problem/23145734
Attachments
Patch
(6.77 KB, patch)
2015-10-28 17:20 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2015-10-28 17:20:04 PDT
Created
attachment 264272
[details]
Patch
Beth Dakin
Comment 2
2015-10-29 11:09:13 PDT
Thanks Tim!
http://trac.webkit.org/changeset/191735
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug