Overlay scrollbars disappear during manual drag-scroll https://bugs.webkit.org/show_bug.cgi?id=150646 -and corresponding- rdar://problem/23145734

Reviewed by Tim Horton.

New ScrollAnimator function so that we can tell the ScrollbarPainter whether
or not the mouse is tracking the scrollbar.
* platform/ScrollAnimator.h:
(WebCore::ScrollAnimator::ScrollAnimator::mouseIsDownInScrollbar):
* platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::mouseIsDownInScrollbar):
* platform/ScrollableArea.h:

Call into the new ScrollAnimator function of mouseDown and mouseUp.
* platform/Scrollbar.cpp:
(WebCore::Scrollbar::mouseUp):
(WebCore::Scrollbar::mouseDown):

Add setTracking to the ScrollbarPainter.
* platform/mac/NSScrollerImpDetails.h:

Implement mouseIsDownInScrollbar to call setTracking appropriately and to set
begin/endScrollGesture since drag scrolling does not normally trigger that
state change.
* platform/mac/ScrollAnimatorMac.h:
* platform/mac/ScrollAnimatorMac.mm:
(WebCore::ScrollAnimatorMac::mouseIsDownInScrollbar):



Canonical link: https://commits.webkit.org/168841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191735 268f45cc-cd09-0410-ab3c-d52691b4dbfc